--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -8,11 +8,11 @@ defaults
         timeout client 15000
         timeout server 15000
 
-frontend ar-in
+frontend ss-in
         bind *:8000
-        default_backend ar-out
+        default_backend ss-out
 
 
 
-backend ar-out
-        
+backend ss-out
+        server server1 $SS_IP:$SS_PORT maxconn 20480
