--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -8,11 +8,11 @@ defaults
         timeout client 15000
         timeout server 15000
 
-frontend ss-in
+frontend in
         bind *:8000
-        default_backend ss-out
+        default_backend out
 
 
 
-backend ss-out
-        server server1 $SS_IP:$SS_PORT maxconn 20480
+backend out
+        server server1 $inIp:$inPort maxconn 20480
